<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-66dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/appointment_name"
                android:layout_width="488dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:hint="@string/rdvname"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text" />

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:imeOptions="flagNoExtractUi" />

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi" />

            <EditText
                android:id="@+id/appointment_address"
                android:layout_width="488dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:hint="@string/rdvaddress"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text" />

            <Button
                android:id="@+id/importContactButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/importcontact" />

            <EditText
                android:id="@+id/appointment_contact_name"
                android:layout_width="488dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:layout_marginBottom="16dp"
                android:hint="@string/namecontact"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text" />

            <EditText
                android:id="@+id/appointment_contact_number"
                android:layout_width="488dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:layout_marginBottom="25dp"
                android:hint="@string/numbercontact"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>